--- a/ddp-workspace/tsconfig.json
+++ b/ddp-workspace/tsconfig.json
@@ -27,6 +27,9 @@
       "toolkit": [
         "projects/toolkit/src/public-api"
       ],
+      "toolkit-prion": [
+        "projects/toolkit-prion/src/public-api"
+        ]
     }
   }
 }
