Prion: Moved existing Prion branch code into new branch because old branch was causing rebase issues.

--- a/ddp-workspace/tsconfig.json
+++ b/ddp-workspace/tsconfig.json
@@ -26,6 +26,9 @@
       "toolkit": [
         "projects/toolkit/src/public-api"
       ],
+      "toolkit-prion": [
+        "projects/toolkit-prion/src/public-api"
+        ]
     }
   }
 }
