--- a/config/deployment/test/dispatch.yaml
+++ b/config/deployment/test/dispatch.yaml
@@ -19,6 +19,8 @@ dispatch:
     service: pepper-api-spec
   - url: "pepper-test.datadonationplatform.org/*"
     service: pepper-backend
+  - url: "dsm-dev.datadonationplatform.org/ddp/*"
+    service: study-manager-backend
   - url: "dsm-test.datadonationplatform.org/api/*"
     service: study-manager-backend
   - url: "dsm-test.datadonationplatform.org/app/*"
