DDP-4921 fixed non-dev environments

--- a/config/deployment/prod/dispatch.yaml
+++ b/config/deployment/prod/dispatch.yaml
@@ -17,7 +17,7 @@ dispatch:
     service: pepper-api-spec
   - url: "pepper.datadonationplatform.org/*"
     service: pepper-backend
-  - url: "dsm-dev.datadonationplatform.org/ddp/*"
+  - url: "dsm.datadonationplatform.org/ddp/*"
     service: study-manager-backend
   - url: "dsm.datadonationplatform.org/api/*"
     service: study-manager-backend
