--- a/ddp-workspace/projects/ddp-sdk/package.json
+++ b/ddp-workspace/projects/ddp-sdk/package.json
@@ -17,11 +17,14 @@
     "@nguniversal/express-engine": "8.1.1",
     "@ngx-translate/core": "12.1.2",
     "@ngx-translate/http-loader": "4.0.0",
-    "auth0-js": "9.13.2",
-    "auth0-lock": "11.26.0",
+    "auth0-js": "9.14.0",
+    "auth0-lock": "11.26.3",
+    "bootstrap": "3.4.1",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.4",
+    "font-awesome": "4.7.0",
     "hammerjs": "2.0.8",
+    "jquery": "3.5.1",
     "kaop-ts": "3.1.2",
     "ngx-cookie": "4.1.2",
     "npm-sass": "2.2.1",
