--- a/config/deployment/dev/dispatch.yaml
+++ b/config/deployment/dev/dispatch.yaml
@@ -7,6 +7,8 @@ dispatch:
     service: brain
   - url: "osteo.dev.datadonationplatform.org/*"
     service: osteo
+  - url: "rare-x.dev.datadonationplatform.org/*"
+    service: rarex
   - url: "testboston.dev.datadonationplatform.org/*"
     service: testboston
   - url: "mpc.dev.datadonationplatform.org/*"
