--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ references:
       - *npm_cache_key
   # Note: important that values of guids and keys have matching order!"
   study_keys: &study_keys
-    "osteo brain brain-v2 angio mbc testboston mpc prion atcp"
+    "osteo brain brain-v2 angio mbc testboston mpc prion atcp rarex"
   study_guids: &study_guids
       "CMI-OSTEO cmi-brain cmi-brain ANGIO cmi-mbc testboston cmi-mpc PRION atcp"
   config_deployment_dir: &config_deployment_dir
@@ -436,6 +436,8 @@ jobs:
           study_key: mpc
       - conditionally-launch-build-and-store:
           study_key: atcp
+      - conditionally-launch-build-and-store:
+          study_key: rarex
 
   app-build-and-store-job:
     working_directory: *ng_workspace_path
@@ -540,6 +542,9 @@ workflows:
       - deploy-stored-build-job:
           <<: *deploy_branch_filters
           study_key: atcp
+      - deploy-stored-build-job:
+          <<: *deploy_branch_filters
+          study_key: rarex
 
   nightly:
     triggers:
@@ -574,3 +579,6 @@ workflows:
       - build-and-deploy-job:
           name: atcp-nightly
           study_key: atcp
+      - build-and-deploy-job:
+          name: rarex-nightly
+          study_key: rarex
