--- a/ddp-workspace/projects/toolkit-prion/tsconfig.lib.json
+++ b/ddp-workspace/projects/toolkit-prion/tsconfig.lib.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
     "target": "es5",
@@ -15,10 +15,17 @@
     "lib": [
       "dom",
       "es2018"
-    ]
+    ],
+    "paths": {
+      "ddp-sdk": [
+        "projects/ddp-sdk/src/public-api"
+      ],
+      "toolkit": [
+        "projects/toolkit/src/public-api"
+      ]
+    }
   },
   "angularCompilerOptions": {
-    "annotateForClosureCompiler": true,
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
     "fullTemplateTypeCheck": true,
