--- a/ddp-workspace/tsconfig.base.json
+++ b/ddp-workspace/tsconfig.base.json
@@ -25,6 +25,9 @@
       ],
       "toolkit": [
         "projects/toolkit/src/public-api"
+      ],
+      "toolkit-prion": [
+        "projects/toolkit-prion/src/public-api"
       ]
     }
   }
