--- a/ddp-workspace/projects/ddp-atcp/tsconfig.app.json
+++ b/ddp-workspace/projects/ddp-atcp/tsconfig.app.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/app",
     "types": [],
@@ -11,7 +11,7 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.ts"
+    "src/**/*.d.ts"
   ],
   "exclude": [
     "src/test.ts",
