--- a/ddp-workspace/projects/toolkit-prion/tsconfig.lib.json
+++ b/ddp-workspace/projects/toolkit-prion/tsconfig.lib.json
@@ -18,10 +18,16 @@
     ],
     "paths": {
       "ddp-sdk": [
-        "projects/ddp-sdk/src/public-api"
+        "dist/ddp-sdk"
+      ],
+      "ddp-sdk/*": [
+        "dist/ddp-sdk/*"
       ],
       "toolkit": [
-        "projects/toolkit/src/public-api"
+        "dist/toolkit"
+      ],
+      "toolkit/*": [
+        "dist/toolkit/*"
       ]
     }
   },
