--- a/ddp-workspace/projects/toolkit/tsconfig.lib.json
+++ b/ddp-workspace/projects/toolkit/tsconfig.lib.json
@@ -18,7 +18,10 @@
     ],
     "paths": {
       "ddp-sdk": [
-        "projects/ddp-sdk/src/public-api"
+        "dist/ddp-sdk"
+      ],
+      "ddp-sdk/*": [
+        "dist/ddp-sdk/*"
       ]
     }
   },
