--- a/ddp-workspace/projects/ddp-sdk/package.json
+++ b/ddp-workspace/projects/ddp-sdk/package.json
@@ -26,6 +26,8 @@
     "hammerjs": "2.0.8",
     "jquery": "3.5.1",
     "kaop-ts": "3.1.2",
+    "ng-recaptcha": "5.0.0",
+    "ngx-bootstrap": "5.5.0",
     "ngx-cookie": "4.1.2",
     "npm-sass": "2.2.1",
     "package": "1.0.1",
