--- a/ddp-workspace/projects/toolkit-prion/package.json
+++ b/ddp-workspace/projects/toolkit-prion/package.json
@@ -24,6 +24,8 @@
     "ddp-sdk": "1.0.0",
     "hammerjs": "2.0.8",
     "kaop-ts": "3.1.2",
+    "ng-recaptcha": "5.0.0",
+    "ngx-bootstrap": "5.5.0",
     "ngx-cookie": "4.1.2",
     "npm-sass": "2.2.1",
     "package": "1.0.1",
