Prion: DDP-5410: Set up dispatch for Prion test, staging, and prod

--- a/config/deployment/prod/dispatch.yaml
+++ b/config/deployment/prod/dispatch.yaml
@@ -11,6 +11,8 @@ dispatch:
     service: testboston
   - url: "mpcproject.org/*"
     service: mpc
+  - url: "prionregistry.org/*"
+    service: prion
   - url: "pepper.datadonationplatform.org/docs*"
     service: pepper-api-spec
   - url: "pepper.datadonationplatform.org/spec/*"
