--- a/ddp-workspace/package.json
+++ b/ddp-workspace/package.json
@@ -29,6 +29,7 @@
     "auth0-js": "9.14.0",
     "auth0-lock": "11.27.0",
     "bootstrap": "3.4.1",
+    "chromium": "^3.0.2",
     "classlist.js": "1.1.20150312",
     "core-js": "3.6.5",
     "font-awesome": "4.7.0",
