--- a/ddp-workspace/angular.json
+++ b/ddp-workspace/angular.json
@@ -1755,7 +1755,7 @@
             "main": "projects/ddp-esc/src/main.ts",
             "polyfills": "projects/ddp-esc/src/polyfills.ts",
             "tsConfig": "projects/ddp-esc/tsconfig.app.json",
-            "aot": false,
+            "aot": true,
             "assets": [
               "projects/ddp-esc/src/favicon.ico",
               "projects/ddp-esc/src/favicon-alert.ico",
@@ -1775,8 +1775,7 @@
               "projects/ddp-esc/src/theme.scss",
               "projects/ddp-esc/src/styles.scss"
             ],
-            "scripts": [],
-            "es5BrowserSupport": true
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -1791,24 +1790,28 @@
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
-              "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2mb",
+                  "maximumWarning": "5mb",
                   "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
+                  "maximumWarning": "25kb"
                 }
               ]
             },
             "es5": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "25kb"
+                }
+              ],
               "tsConfig": "projects/ddp-esc/tsconfig.es5.json"
             }
           }
