--- a/config/deployment/staging/dispatch.yaml
+++ b/config/deployment/staging/dispatch.yaml
@@ -11,6 +11,8 @@ dispatch:
     service: testboston
   - url: "mpc.staging.datadonationplatform.org/*"
     service: mpc
+  - url: "esc.staging.datadonationplatform.org/*"
+    service: esc
   - url: "prion.staging.datadonationplatform.org/*"
     service: prion
   - url: "pepper-staging.datadonationplatform.org/docs*"
