--- a/config/deployment/test/dispatch.yaml
+++ b/config/deployment/test/dispatch.yaml
@@ -11,6 +11,8 @@ dispatch:
     service: testboston
   - url: "mpc.test.datadonationplatform.org/*"
     service: mpc
+  - url: "esc.test.datadonationplatform.org/*"
+    service: esc
   - url: "prion.test.datadonationplatform.org/*"
     service: prion
   - url: "pepper-test.datadonationplatform.org/docs*"
