DDP-5470 Set compression level to 5

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,6 +20,8 @@ http {
 
     access_log  /var/log/nginx/access.log  main;
 
+    gzip_comp_level 5;
+
     sendfile        on;
 
     keepalive_timeout  65;
