RGP: DDP-5207, dev deployment: added RGP frontend to deployment list

--- a/config/deployment/dev/dispatch.yaml
+++ b/config/deployment/dev/dispatch.yaml
@@ -15,6 +15,8 @@ dispatch:
     service: esc
   - url: "prion.dev.datadonationplatform.org/*"
     service: prion
+  - url: "rgp.dev.datadonationplatform.org/*"
+      service: rgp
   - url: "pepper-dev.datadonationplatform.org/docs*"
     service: pepper-api-spec
   - url: "pepper-dev.datadonationplatform.org/spec/*"
