--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,9 @@ references:
       - *npm_cache_key
   # Note: important that values of guids and keys have matching order!"
   study_keys: &study_keys
-    "osteo brain angio mbc testboston mpc prion atcp rgp"
+    "osteo brain angio mbc testboston mpc prion atcp rgp esc"
   study_guids: &study_guids
-      "CMI-OSTEO cmi-brain ANGIO cmi-mbc testboston cmi-mpc PRION atcp rgp"
+    "CMI-OSTEO cmi-brain ANGIO cmi-mbc testboston cmi-mpc PRION atcp rgp cmi-esc"
   config_deployment_dir: &config_deployment_dir
       config/deployment
 
@@ -437,6 +437,8 @@ jobs:
       - conditionally-launch-build-and-store:
           study_key: rgp
       - conditionally-launch-build-and-store:
+          study_key: esc
+      - conditionally-launch-build-and-store:
           study_key: prion
 
   app-build-and-store-job:
@@ -543,6 +545,9 @@ workflows:
           study_key: rgp
       - deploy-stored-build-job:
           <<: *deploy_branch_filters
+          study_key: esc
+      - deploy-stored-build-job:
+          <<: *deploy_branch_filters
           study_key: prion
 
   nightly:
@@ -578,6 +583,9 @@ workflows:
       - build-and-deploy-job:
           name: rgp-nightly
           study_key: rgp
+      - build-and-deploy-job:
+          name: esc-nightly
+          study_key: esc
       - build-and-deploy-job:
           name: prion-nightly
           study_key: prion
