--- a/ddp-workspace/angular.json
+++ b/ddp-workspace/angular.json
@@ -119,7 +119,9 @@
               "projects/ddp-angio/src/theme.scss",
               "projects/ddp-angio/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/stackdriver-errors-js/dist/stackdriver-errors-concat.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -294,7 +296,8 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/stackdriver-errors-js/dist/stackdriver-errors-concat.min.js"
             ]
           },
           "configurations": {
@@ -445,7 +448,9 @@
               "projects/ddp-brain/src/theme.scss",
               "projects/ddp-brain/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/stackdriver-errors-js/dist/stackdriver-errors-concat.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -595,7 +600,9 @@
               "projects/ddp-mbc/src/theme.scss",
               "projects/ddp-mbc/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/stackdriver-errors-js/dist/stackdriver-errors-concat.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -994,7 +1001,9 @@
               "projects/ddp-osteo/src/theme.scss",
               "projects/ddp-osteo/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/stackdriver-errors-js/dist/stackdriver-errors-concat.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -1143,7 +1152,9 @@
               "projects/ddp-prion/src/theme.scss",
               "projects/ddp-prion/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/stackdriver-errors-js/dist/stackdriver-errors-concat.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -1286,7 +1297,9 @@
               "projects/ddp-testboston/src/theme.scss",
               "projects/ddp-testboston/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/stackdriver-errors-js/dist/stackdriver-errors-concat.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -1436,7 +1449,9 @@
               "projects/ddp-mpc/src/theme.scss",
               "projects/ddp-mpc/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/stackdriver-errors-js/dist/stackdriver-errors-concat.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -1626,7 +1641,9 @@
               "projects/ddp-rgp/src/theme.scss",
               "projects/ddp-rgp/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/stackdriver-errors-js/dist/stackdriver-errors-concat.min.js"
+            ]
           },
           "configurations": {
             "production": {
