--- a/ddp-workspace/package.json
+++ b/ddp-workspace/package.json
@@ -43,6 +43,7 @@
     "package": "1.0.1",
     "raw-loader": "0.5.1",
     "rxjs": "6.6.3",
+    "stackdriver-errors-js": "0.8.0",
     "tslib": "2.0.1",
     "underscore": "1.11.0",
     "web-animations-js": "2.3.2",
