--- a/config/deployment/prod/dispatch.yaml
+++ b/config/deployment/prod/dispatch.yaml
@@ -11,6 +11,8 @@ dispatch:
     service: testboston
   - url: "mpcproject.org/*"
     service: mpc
+  - url: "escproject.org/*"
+    service: esc
   - url: "prionregistry.org/*"
     service: prion
   - url: "pepper.datadonationplatform.org/docs*"
