--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -283,19 +283,38 @@ commands:
       - store_artifacts:
           path: /tmp/junit
 
-  build-app:
-    description: "Build DDP study app"
+  build-atcp-assets:
+    description: build atcp auth0 scripts & styles
+    steps:
+      - run:
+          name: build atcp auth0 scripts
+          command: |
+            set -u
+            ng build ddp-atcp-auth
+      - run:
+          name: build atcp auth0 styles
+          command: |
+            set -u
+            ./node_modules/.bin/sass ./projects/ddp-atcp/src/auth0/auth0-styles/main.scss ./projects/ddp-atcp/src/auth0/compiled/auth0-styles/main.css --style compressed
+
+  execute-study-specific-commands:
+    description: run study specific commands if necessary
     steps:
       - when:
           condition:
             equal: [ atcp, << pipeline.parameters.study_key >> ]
           steps:
-            - run:
-                name: ng build atcp styles and Auth0 scripts
-                command: |
-                  set -u
-                  ng build ddp-atcp-auth
-                  ./node_modules/.bin/sass ./projects/ddp-atcp/src/auth0/auth0-styles/main.scss ./projects/ddp-atcp/src/auth0/compiled/auth0-styles/main.css --style compressed
+            - build-atcp-assets
+
+  build-app:
+    description: "Build DDP study app"
+    steps:
+      - when:
+          condition:
+            or:
+              equal: [ atcp, << pipeline.parameters.study_key >> ]
+          steps:
+            - execute-study-specific-commands
       - run:
           name: ng build
           command: |
