--- a/ddp-workspace/package.json
+++ b/ddp-workspace/package.json
@@ -10,6 +10,11 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "husky": {
+    "hooks": {
+      "pre-push": "ng lint"
+    }
+  },
   "dependencies": {
     "@angular/animations": "10.2.3",
     "@angular/cdk": "10.2.7",
@@ -60,6 +65,7 @@
     "@types/jasminewd2": "2.0.8",
     "@types/node": "14.11.2",
     "codelyzer": "6.0.0",
+    "husky": "4.3.8",
     "jasmine-core": "3.6.0",
     "jasmine-marbles": "0.6.0",
     "jasmine-spec-reporter": "6.0.0",
