--- a/ddp-workspace/angular.json
+++ b/ddp-workspace/angular.json
@@ -973,8 +973,12 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path": "./extra-webpack.config.js",
+              "replaceDuplicatePlugins": true
+            },
             "outputPath": "dist/ddp-osteo",
             "index": "projects/ddp-osteo/src/index.html",
             "main": "projects/ddp-osteo/src/main.ts",
