--- a/ddp-workspace/package.json
+++ b/ddp-workspace/package.json
@@ -59,6 +59,7 @@
     "@angular/cli": "10.2.0",
     "@angular/compiler-cli": "10.2.3",
     "@angular/language-service": "10.2.3",
+    "@angular/localize": "^10.2.3",
     "@types/google-maps": "3.2.2",
     "@types/google.analytics": "0.0.40",
     "@types/jasmine": "3.5.14",
