--- a/ddp-workspace/angular.json
+++ b/ddp-workspace/angular.json
@@ -3,6 +3,86 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    "ddp-sdk": {
+      "root": "projects/ddp-sdk",
+      "sourceRoot": "projects/ddp-sdk/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ddp-sdk/tsconfig.lib.json",
+            "project": "projects/ddp-sdk/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ddp-sdk/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ddp-sdk/src/test.ts",
+            "tsConfig": "projects/ddp-sdk/tsconfig.spec.json",
+            "karmaConfig": "projects/ddp-sdk/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ddp-sdk/tsconfig.lib.json",
+              "projects/ddp-sdk/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "toolkit": {
+      "root": "projects/toolkit",
+      "sourceRoot": "projects/toolkit/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/toolkit/tsconfig.lib.json",
+            "project": "projects/toolkit/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/toolkit/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/toolkit/src/test.ts",
+            "tsConfig": "projects/toolkit/tsconfig.spec.json",
+            "karmaConfig": "projects/toolkit/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/toolkit/tsconfig.lib.json",
+              "projects/toolkit/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
     "ddp-angio": {
       "projectType": "application",
       "schematics": {},
