--- a/ddp-workspace/projects/ddp-rgp/tsconfig.app.json
+++ b/ddp-workspace/projects/ddp-rgp/tsconfig.app.json
@@ -9,7 +9,7 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.ts"
   ],
   "angularCompilerOptions": {
     "preserveWhitespaces": true
