--- a/ddp-workspace/projects/ddp-rarex/tsconfig.app.json
+++ b/ddp-workspace/projects/ddp-rarex/tsconfig.app.json
@@ -5,7 +5,7 @@
     "types": []
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
-  "include": ["src/**/*.d.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["src/test.ts", "src/**/*.spec.ts"],
   "angularCompilerOptions": {
     "preserveWhitespaces": true
