--- a/ddp-workspace/package.json
+++ b/ddp-workspace/package.json
@@ -80,6 +80,7 @@
     "protractor": "7.0.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.0",
+    "tslint-jasmine-rules": "^1.6.1",
     "typescript": "4.0.2"
   }
 }
