--- a/ddp-workspace/tsconfig.json
+++ b/ddp-workspace/tsconfig.json
@@ -101,6 +101,12 @@
     },
     {
       "path": "./projects/ddp-esc/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/ddp-crc/tsconfig.app.json"
+    },
+    {
+      "path": "./projects/ddp-crc/tsconfig.spec.json"
     }
   ]
 }
