--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ commands:
           study_key: << parameters.study_key >>
       - run-linter-check
       - run-tests
+          study_key: << parameters.study_key >>
       - build-app:
           study_key: << parameters.study_key >>
       - store-app-build
@@ -283,12 +284,18 @@ commands:
 
   run-tests:
     description: "Run all tests"
+    parameters:
+      study_key:
+        type: string
+        default: "UNKNOWN"
     steps:
       - run:
           name: ng test
           command: |
             mkdir -p /tmp/junit
             ng test ddp-sdk --watch=false --browsers ChromeHeadlessNoSandbox --reporters junit
+            ng test ddp-toolkit --watch=false --browsers ChromeHeadlessNoSandbox --reporters junit
+            ng test $ANGULAR_PROJECT_NAME --watch=false --browsers ChromeHeadlessNoSandbox --reporters junit
           environment:
             JUNIT_REPORT_PATH: /tmp/junit/
             JUNIT_REPORT_NAME: test-results.xml
