DDP-5926 turn on study unit tests run

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,7 @@ commands:
             - set-deployment-environment
             - run-linter-check
             - run-tests
+                study_key: << parameters.study_key >>
             - build-app:
                 study_key: << parameters.study_key >>
             - deploy-exploded-build:
